Fixed video rendering too large

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -118,6 +118,7 @@ html {
   max-width: 1000px;
 }
 
+.project-media video,
 .project-media iframe,
 .project-media img {
   width: 320px;
